--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,6 @@
     <h1> Hello World! </h1>
     <h1> This is dockerize flask app test page </h1>
     <h1> This is dockerize flask using github  </h1>
+    <h1> release version 1.0  </h1>
 </body>
 </html>
