--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,6 @@
     <h1> This is dockerize flask using github  </h1>
     <h1> release version 1.0  </h1>
     <h1> release version 2.0  </h1>
+    test test test
 </body>
 </html>
