--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,6 @@
     <h1> release version 1.0  </h1>
     <h1> release version 2.0  </h1>
     test test test test
-    dhfsb  jfbkbv
+    dhfsb  jfbkbv jddsc
 </body>
 </html>
