--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,6 @@
     <h1> release version 2.0  </h1>
     3 3  3 3 3 4 5 5 5 5 6 6 6 7 7 7 8 8 8
     dhdfbhd hfbfjhbds 3483hfvfv jdds hv x
+    mdkdd
 </body>
 </html>
